@@ -25,9 +25,6 @@ import traceback
 import sys, os
 from lib import *
 
-def row(text, value, icon=D+'umut_icons/i_default.png', tooltip = None):
-    return (text, value, icon, tooltip)
-
 def __read(path):
     with open(path) as f:
         ret = f.read().rstrip()
@@ -195,5 +192,5 @@ def __battery():
     return ret
 
 def get():
-    return ( __motherboard() + __bios() + __cpu() + __cpu_temp() +
-             __mem() + __pci() + __battery() )
+    return [ __motherboard, __bios, __cpu, __cpu_temp,
+             __mem, __pci, __battery ]
