@@ -25,9 +25,6 @@ import traceback
 import sys, os
 from lib import *
 
-def row(text, value, icon=D+'umut_icons/i_default.png', tooltip = None):
-    return (text, value, icon, tooltip)
-
 def __host_name():
     try: return [row(_('Host name:'), get_output('hostname'), D+'umut_icons/i_host.png' )]
     except: traceback.print_exc(file=sys.stderr)
@@ -149,8 +146,8 @@ def __firefox():
     return []
 
 def get():
-    return ( __host_name() + __user() + __uptime() + __kernel() + __xorg() +
-             __opengl() + __gcc() + __java() + __python() + __gtk() + __pygtk() +  __firefox() )
+    return [ __host_name, __user, __uptime, __kernel, __xorg,
+             __opengl, __gcc, __java, __python, __gtk, __pygtk,  __firefox ]
 
 if __name__ == '__main__':
     print get()
