@@ -25,10 +25,7 @@ import traceback
 import sys, os
 from lib import *
 
-def row(text, value, icon=D+'umut_icons/i_default.png', tooltip = None):
-    return (text, value, icon, tooltip)
-
-def get():
+def __gnome():
     import os, re
     ret = []
     
@@ -51,3 +48,6 @@ def get():
     except: traceback.print_exc(file=sys.stderr)
 
     return ret
+
+def get():
+    return [__gnome]
