@@ -38,7 +38,7 @@ class InfoPane(gtk.VBox):
         text = model.get_value(iter, 2)
         cell.set_property('text', text)
 
-    def __init__(self, main_view, COMMON, DESKTOP, DISTRIBUTION, tuples):
+    def __init__(self, main_view, tuples):
         gtk.VBox.__init__(self)
         
         self.treestore = gtk.TreeStore(gtk.gdk.Pixbuf, str, str)
@@ -62,126 +62,35 @@ class InfoPane(gtk.VBox):
         scrollwindow.set_shadow_type (gtk.SHADOW_IN)
         
         self.pack_start(scrollwindow)
-    
-        self.COMMON = COMMON
-        self.DESKTOP = DESKTOP
-        self.DISTRIBUTION = DISTRIBUTION
-        self.tuples = tuples
-
-        self.refresh()
-        import gobject
-        gobject.timeout_add(5000, self.refresh)
         
-    def refresh(self):
-        self.treestore.clear()
-        for title, icon, function in self.tuples:
+        self.tuples = tuples
+        self.function2trees = {}
+        
+        for title, icon, functions in self.tuples:
             pixbuf = get_pixbuf(icon, 24, 24)
             parent = self.treestore.append(None, [pixbuf, title, None])
-            info = function(self.COMMON, self.DESKTOP, self.DISTRIBUTION)
-            for row in info:
-                pixbuf = get_pixbuf(row[2], 24, 24)
-                self.treestore.append(parent, [pixbuf, row[0], row[1]])
-        self.treeview.expand_all()
-        return True
-    
-    def register(self, title, icon, load_info, *w):
-        pixbuf = get_pixbuf(icon, 24, 24)
-        parent = self.treestore.append(None, [pixbuf, title, None])
-        self.__refresh_sub(parent, load_info, *w)
-        
-    def __refresh_sub(self, tree, load_info, *w):
-        info = load_info(*w)
-        for row in info:
-            pixbuf = get_pixbuf(row[2], 24, 24)
-            self.treestore.append(tree, [pixbuf, row[0], row[1]])
-#        import gobject
-#        gobject.timeout_add(5000, self.__refresh_sub, tree, load_info, *w)
+            self.__build_subtree(parent, functions)
 
-#class InfoPane(gtk.VBox):
-#    def __init__(self):
-#        gtk.VBox.__init__(self)
-#        self.left_box = gtk.VBox(False, 5)
-#        self.middle_box = gtk.VBox(False, 5)
-#        self.right_box = gtk.VBox(False, 5)
-#        hbox = gtk.HBox(False, 10)
-#        hbox.pack_start(self.left_box, False)
-#        hbox.pack_start(self.middle_box, False)
-#        hbox.pack_start(self.right_box)
-#        hbox_scroll = gtk.ScrolledWindow()
-#        hbox_scroll.set_policy(gtk.POLICY_AUTOMATIC, gtk.POLICY_AUTOMATIC)
-#        hbox_scroll.add_with_viewport(hbox)
-#        self.pack_start(hbox_scroll)
-#    def add_row(self, text, value, icon=D+'umut_icons/i_default.png', tooltip = None):
-#        assert isinstance(text, (str,unicode) )
-#        assert isinstance(value, (str,unicode) )
-#        assert isinstance(icon, str)
-#        assert tooltip==None or isinstance(tooltip, (str,unicode) )
-#
-#        pixbuf = get_pixbuf(icon, 24, 24)
-#        image = gtk.Image()
-#        image.set_from_pixbuf(pixbuf)
-#        if tooltip: image.set_tooltip_text(tooltip)
-#        self.left_box.pack_start(image)
-#        
-#        label = gtk.Label(text)
-#        if tooltip: label.set_tooltip_text(tooltip)
-#        self.middle_box.pack_start( left_align(label) )
-#        
-#        label2 = gtk.Label(value)
-#        label2.set_selectable(True)
-#        if tooltip: label2.set_tooltip_text(tooltip)
-#        self.right_box.pack_start( left_align(label2))
-#        
-#class InfoPane2(gtk.VBox):
-#    def __init__(self):
-#        gtk.VBox.__init__(self)
-#        self.table = table = gtk.Table()
-#        self.table_pos = 0
-#        table.set_col_spacings(10)
-#        table.set_border_width(10)
-#        scroll = gtk.ScrolledWindow()
-#        scroll.set_policy(gtk.POLICY_NEVER, gtk.POLICY_AUTOMATIC)
-#        scroll.add_with_viewport(table)
-#        self.pack_start(scroll)
-#    def add_row(self, text, value, icon=D+'umut_icons/i_default.png', tooltip = None):
-#        assert isinstance(text, (str,unicode) )
-#        assert isinstance(value, (str,unicode) )
-#        assert isinstance(icon, str)
-#        assert tooltip==None or isinstance(tooltip, (str,unicode) )
-#        
-#        pos = self.table_pos
-#        pixbuf = get_pixbuf(icon, 32, 32)
-#        image = gtk.Image()
-#        image.set_from_pixbuf(pixbuf)
-#        if tooltip: image.set_tooltip_text(tooltip)
-#        self.table.attach(image, 0, 1, pos, pos+1, gtk.FILL, gtk.FILL)
-#        label = gtk.Label(text)
-#        if tooltip: label.set_tooltip_text(tooltip)
-#        align = gtk.Alignment(0,0.5)
-#        align.add(label)
-#        self.table.attach(align, 1, 2, pos, pos+1, gtk.FILL, gtk.FILL)
-#        label2 = gtk.Entry()
-#        gray_bg(label2)
-#        if tooltip: label2.set_tooltip_text(tooltip)
-#        label2.set_text(value)
-#        label2.set_editable(False)
-#        self.table.attach(label2, 2, 3, pos, pos+1, gtk.FILL|gtk.EXPAND, gtk.FILL)
-#        self.table_pos += 1
-#
-#class HardwareInfoPane(InfoPane):
-#    name = _('Hardware Information')
-#    def __init__(self, main_view, rows):
-#        InfoPane.__init__(self)
-#        for row in rows:
-#            assert isinstance(row, tuple)
-#            assert len(row)==4
-#            self.add_row(*row)
-#
-#class LinuxInfoPane(InfoPane):
-#    name = _('Linux Information')
-#    def __init__(self, main_view, rows):
-#        InfoPane.__init__(self)
-#        for row in rows:
-#            assert isinstance(row, tuple)
-#            assert len(row)==4
-#            self.add_row(*row)
+        self.treeview.expand_all()
+
+        import gobject
+        gobject.timeout_add(5000, self.refresh)
+    
+    def __build_subtree(self, tree, functions):
+        for function in functions:
+            rows = function()
+            trees = self.function2trees[function] = []
+            for row in rows:
+                pixbuf = get_pixbuf(row[2], 24, 24)
+                t = self.treestore.append(tree, [pixbuf, row[0], row[1]])
+                trees.append(t)
+        
+    def refresh(self):
+        for function in self.function2trees.keys():
+            rows = function()
+            index = 0
+            for tree in self.function2trees[function]:
+                row = rows[index]
+                self.treestore.set_value(tree, 2, row[1])
+                index += 1
+        return True
